--- a/snippets/colors-settings.liquid
+++ b/snippets/colors-settings.liquid
@@ -41,7 +41,7 @@
     {% render 'checkbox-flag', id: 'unfilledFlagToggle', label: 'Show Country Flags' %}
 
     <!-- Unfilled Countries -->
-    <div class="flex items-center justify-between py-2">
+    <div id="unfilledCountries" class="flex items-center justify-between py-2">
       <label class="text-gray-800 min-w-[140px] mr-2">{{ 'unfilled_countries' | t }}</label>
       <div class="flex items-center gap-3">
         <div class="relative h-12 w-12">
@@ -69,7 +69,7 @@
 
     {% render 'checkbox-flag', id: 'flagBackgroundToggle', label: 'Use Country Flags' %}
     <!-- Selected Countries -->
-    <div class="flex items-center justify-between py-2">
+    <div id="selectedCountries" class="flex items-center justify-between py-2">
       <label class="text-gray-800 min-w-[140px] mr-2">{{ 'selected_countries' | t }}</label>
       <div class="flex items-center gap-3">
         <div class="relative h-12 w-12">
