--- a/snippets/colors-settings.liquid
+++ b/snippets/colors-settings.liquid
@@ -38,7 +38,11 @@
       </div>
     </div>
 
-    {% render 'checkbox-flag', id: 'unfilledFlagToggle', label: 'Show Country Flags' %}
+    {%
+      render 'checkbox-flag',
+      id: 'unfilledFlagToggle',
+      label: 'unfilled_flag' | t
+    %}
 
     <!-- Unfilled Countries -->
     <div id="unfilledCountries" class="flex items-center justify-between py-2">
@@ -67,7 +71,11 @@
       </div>
     </div>
 
-    {% render 'checkbox-flag', id: 'flagBackgroundToggle', label: 'Use Country Flags' %}
+    {%
+      render 'checkbox-flag',
+      id: 'filledFlagToggle',
+      label: 'filled_flag' | t
+    %}
     <!-- Selected Countries -->
     <div id="selectedCountries" class="flex items-center justify-between py-2">
       <label class="text-gray-800 min-w-[140px] mr-2">{{ 'selected_countries' | t }}</label>
