--- a/sections/faq.liquid
+++ b/sections/faq.liquid
@@ -50,6 +50,10 @@
     border-bottom: 1px solid #ddd;
   }
 
+  .faq__item:last-child {
+    border-bottom: none;
+  }
+
   .faq__question {
     background: none;
     border: none;
