--- a/assets/base.css
+++ b/assets/base.css
@@ -3595,3 +3595,9 @@ details-disclosure > details {
     transform: translateX(100%) scaleX(0);
   }
 }
+
+/* Hide mapData on cart page */
+.cart-item__details>dl>div:nth-child(3),
+[id^="CartItem-"]>td.cart-item__details>dl>div:nth-child(3) {
+  display: none !important;
+}
